--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="/css/main.css"> -->
-    <!-- <link rel="stylesheet" href="/css/normalize.css"> -->
-    <link rel="stylesheet" href="/css/main.mini.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <!-- <link rel="stylesheet" href="/css/main.mini.css"> -->
     <title>Coffeeroaters</title>
 </head>
 <body>
@@ -65,28 +65,35 @@
                         </h2>
                         <ul class="collection__list">
                             <li class="collection__item">
-                                <img src="./images/herolist1.png" width="450" height="375"  alt="Danche brand product">
+                                <img src="./images/herolist1.png" 
+                                width="450" 
+                                height="375"  
+                                alt="Danche brand product"
+                                srcset="./images/herolist1.png 1x, ./images/herolist1@2x.png 2x">
                                 <div class="collection__inner">
                                     <h3 class="collection__item-title">Danche</h3>
                                     <p class="collection__desc">Ethiopian hand-harvested blend densely packed with vibrant fruit notes.</p>
                                 </div>
                             </li>
                             <li class="collection__item">
-                                <img src="./images/herolist2.png" width="450" height="375"  alt="Gran Espresso brand product">
+                                <img src="./images/herolist2.png" width="450" height="375"  alt="Gran Espresso brand product"
+                                srcset="./images/herolist2.png 1x, ./images/herolist2@2x.png 2x">
                                 <div class="collection__inner">
                                     <h3 class="collection__item-title">Gran Espresso</h3>
                                     <p class="collection__desc">Light and flavorful blend with cocoa and black pepper for an intense experience.</p>
                                 </div>
                             </li>
                             <li class="collection__item">
-                                <img src="./images/herolist3.png" width="450" height="375"  alt=" Piccollo brand product">
+                                <img src="./images/herolist3.png" width="450" height="375"  alt=" Piccollo brand product"
+                                srcset="./images/herolist3.png 1x, ./images/herolist3@2x.png 2x">
                                 <div class="collection__inner">
                                     <h3 class="collection__item-title">Piccollo</h3>
                                     <p class="collection__desc">Mild and smooth blend featuring notes of toasted almond and dried cherry.</p>
                                 </div>
                             </li>
                             <li class="collection__item">
-                                <img src="./images/herolist4.png"  width="450" height="375" alt="Planalto brand product">
+                                <img src="./images/herolist4.png"  width="450" height="375" alt="Planalto brand product"
+                                srcset="./images/herolist4.png 1x, ./images/herolist4@2x.png 2x">
                                 <div class="collection__inner">
                                     <h3 class="collection__item-title">Planalto</h3>
                                     <p class="collection__desc">Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.</p>
@@ -111,17 +118,20 @@
                     
                     <ol class="choose__list">
                         <li class="choose__item">
-                            <img src="./images/img1.png" width="433" height="500" alt="coffee machine with man">
+                            <img src="./images/img1.png" width="433" height="500" alt="coffee machine with man" 
+                            srcset="./images/img1.png 1x, ./images/img1@2x.png 2x">
                             <h3 class="choose__item-title choose__item-title--pic ">Best quality</h3>
                             <p class="choose__desc">Discover an endless variety of the world’s best artisan coffee from each of our roasters.</p>
                         </li>
                         <li class="choose__item">
-                            <img src="./images/img2.png" width="433" height="500" alt="hot coffee in the cup">
+                            <img src="./images/img2.png" width="433" height="500" alt="hot coffee in the cup"
+                            srcset="./images/img2.png 1x, ./images/img2@2x.png 2x">
                             <h3 class="choose__item-title">Exclusive benefits</h3>
                             <p class="choose__desc">Special offers and swag when you subscribe, including 30% off your first shipment.</p>
                         </li>
                         <li class="choose__item">
-                            <img src="./images/img3.png" width="433" height="500" alt="waitress gives cup of coffee">
+                            <img src="./images/img3.png" width="433" height="500" alt="waitress gives cup of coffee"
+                            srcset="./images/img3.png 1x, ./images/img3@2x.png 2x">
                             <h3 class="choose__item-title">Free shipping</h3>
                             <p class="choose__desc">We cover the cost and coffee is delivered <br> fast. Peak freshness: guaranteed.</p>
                         </li>
